<resources>
    <string name="app_name">ProductivityApp</string>
    <string name="iniciarTextoBoton">Iniciar</string>
    <string name="detenerTextoBoton">Detener</string>
    <string name="modo_estudio">Modo estudio</string>
    <string name="modo_descanso">Modo descanso</string>
    <string name="estudio">Estudio</string>
    <string name="descanso">Descanso</string>
    <string name="low_priority">Baja</string>
    <string name="medium_priority">Media</string>
    <string name="high_priority">Alta</string>
    <string name="crear_tarea">Tarea añadida</string>
    <string name="borrar_tarea">Tarea eliminada</string>
    <string name="acabar_tarea">Tarea acabada</string>
    <string name="editar_tarea">Tarea editada</string>
    <string name="editar_tarea_titulo">Editar tarea</string>
    <string name="error_campos_tarea">Los campos no pueden estar vacíos</string>
    <string name="error_campo_fecha">Fecha inválida. Debe tener el formate dd/MM/yyyy</string>
    <string name="error_fecha_anterior">No puedes usar fechas anteriores a la actual</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotPassword"><u>Restablecer contraseña</u></string>
    <string name="registerNow"><u><b>¿No tienes cuenta? Regístrate</b></u></string>
    <string name="loginNow"><u><b>¿Ya tienes cuenta? Inicia sesión</b></u></string>
    <string name="addTarea">Guardar</string>
    <string name="deleteTarea">Borrar</string>
    <string name="prioridadTarea">Prioridad</string>
    <string name="fechaTarea">Fecha</string>
    <string name="fechaLimiteTarea">Fecha limite</string>
    <string name="descripTarea">Descripción de la tarea</string>
    <string name="tituloTarea">Título de la tarea</string>
    <string name="newTarea">Nueva tarea</string>
    <string name="nombreApp">Productivity App</string>
    <string name="inicioSesion">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="tuEmail">tu@email.com</string>
    <string name="passw">Contraseña</string>
    <string name="tuPassw">tu contraeña</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="noSolicitudes">No hay solicitudes de amistad</string>
    <string name="buscador">Buscador</string>
    <string name="descpImgBt">Buscar amigos en la app</string>
    <string name="rankingEstudio">Ranking Estudio</string>
    <string name="resumenTareas">Resumen de tareas</string>
    <string name="tareasAcabadas">Tareas acabadas</string>
    <string name="tareasNoAcabadas">Tareas no acabadas</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="idUsuario">idUsuario</string>
    <string name="initialTiempo">00:00</string>
    <string name="tareas">Tareas</string>
    <string name="btAñadirTarea">Add</string>
    <string name="usuarioSolicitud">Usuario:</string>
    <string name="aceptarSolicitud">Aceptar</string>
    <string name="rechazarSolicitud">Rechazar</string>
    <string name="fechaLimiteDescTarea">Fecha límite:</string>
    <string name="prioridadDescTarea">Prioridad:</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="social">Social</string>
    <string name="configuracion">Configuración</string>
    <string name="buscar_amigos">Buscar amigos</string>
    <string name="idUser">id usuario</string>
    <string name="añadir">Añadir</string>
    <string name="contraseña">Contraseña</string>
</resources>