<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txIdUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.social.SocialFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/rankingEstudio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="413dp"
        android:layout_height="214dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/txResumenTareas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <!-- Text "Resumen de tareas" -->
    <TextView
        android:id="@+id/txResumenTareas"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/resumenTareas"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.71" />

    <!-- Labels for "Tareas acabadas" and "Tareas no acabadas" -->
    <LinearLayout
        android:id="@+id/layoutLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txResumenTareas">

        <!-- Label for "Tareas acabadas" -->
        <TextView
            android:id="@+id/txTareasAcabadas"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tareasAcabadas"
            android:textSize="16sp" />

        <!-- Label for "Tareas no acabadas" -->
        <TextView
            android:id="@+id/txTareasNoAcabadas"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tareasNoAcabadas"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Numbers for "Tareas acabadas" and "Tareas no acabadas" -->
    <LinearLayout
        android:id="@+id/layoutNumbers"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLabels">

        <!-- Number for "Tareas acabadas" -->
        <TextView
            android:id="@+id/txNumTareasAcabadas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp" />

        <!-- Number for "Tareas no acabadas" -->
        <TextView
            android:id="@+id/txNumTareasNoAcabadas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Button at the bottom -->
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNumbers"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/idUsuario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUsuario" />

    <ImageButton
        android:id="@+id/btAddFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#673AB7"
        android:contentDescription="@string/descpImgBt"
        android:src="@drawable/addfriends"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>